Fix overflow issue

--- a/_ltu-components/src/child-nav/scss/_child-nav.scss
+++ b/_ltu-components/src/child-nav/scss/_child-nav.scss
@@ -11,7 +11,7 @@
         max-width: 100%;
         padding: 0;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         //flex-wrap: wrap;
         align-items: center;
     }
